# chronicle

./: .editorconfig  .gitignore  CLAUDE.md  Makefile
.claude/: settings.json
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: .gitignore
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  watcher.rs
app/src-tauri/src/commands/: appstate.rs  archive.rs  chronicle.rs  claude.rs  file.rs  git.rs  mod.rs  processing.rs  search.rs  session.rs  workspace.rs
app/src-tauri/src/git/: repo.rs
app/src-tauri/src/models/: workspace.rs
app/src-tauri/src/session/: mod.rs  tracker.rs
app/src-tauri/src/storage/: files.rs  metadata.rs  mod.rs  naming.rs  validate.rs  workspace.rs
app/src-tauri/src/websocket/: handlers.rs  mod.rs  server.rs
app/src/routes/: +layout.svelte  +page.svelte
docs/: ARCHITECTURE.md  CODE_REVIEW_v0.6.0.md  DATA_MODELS.md  ENV_CONFIG.md  MCP_API.md  MILESTONES.md  POTENTIAL_IMPROVEMENTS.md  PRD.md  QUICK_START.md  README.md  REDESIGN.md  USER_STORIES.md
docs/review/: ANALYSIS.md  IMPROVE_CODE_QUALITY.md  IMPROVE_FEATURES.md  IMPROVE_MODERN_PRACTICES.md  IMPROVE_SECURITY.md  IMPROVE_UI_DESIGN.md  IMPROVE_UX.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: config.test.ts  config.ts  index.ts  state.ts
mcp-server/src/processing/: parser.test.ts  parser.ts  prompt-builder.test.ts  prompt-builder.ts
mcp-server/src/resources/: config.ts  current.ts  index.ts
(+59 files in other folders)
